Tellma.Api.Web/ClientApp/src/styles.scss
/* ... */
.t-tile-container {
  flex: 0 0 100%;
  max-width: 100%;
}

@media (min-width: 576px) {
  .t-tile-container {
    flex: 0 0 50%;
    max-width: 50%;
  }
}

@media (min-width: 900px) {
  .t-tile-container {
    flex: 0 0 33.33333333%;
    max-width: 33.33333333%;
  }
}

@media (min-width: 1300px) {
  .t-tile-container {
    flex: 0 0 25%;
    max-width: 25%;
  }
}

@media (min-width: 1750px) {
  .t-tile-container {
    flex: 0 0 20%;
    max-width: 20%;
  }
}

@media (min-width: 2100px) {
  .t-tile-container {
    flex: 0 0 16.66666667%;
    max-width: 16.66666667%;
  }
}

@media (min-width: 2450px) {
  .t-tile-container {
    flex: 0 0 14.28571428%;
    max-width: 14.28571428%;
  }
}

@media (min-width: 2800px) {
  .t-tile-container {
    flex: 0 0 12.5%;
    max-width: 12.5%;
  }
}

@media (min-width: 3150px) {
  .t-tile-container {
    flex: 0 0 11.11111111%;
    max-width: 11.11111111%;
  }
}

@media (min-width: 3500px) {
  .t-tile-container {
    flex: 0 0 10;
    max-width: 10%;
  }
}

@media (min-width: 1050px) {
  // prevents the tiles inside a modal from become too narrow, remember that the
  // media query works on the screen as a whole not the width of the modal
  .t-tile-container.t-popup-tile-container {
    flex: 0 0 33.33333333%;
    max-width: 33.33333333%;
  }
}

$paper-width: 1150px; // The default font (1rem) is too big

.t-paper {
  max-width: $paper-width;
  box-shadow: 0 5px 20px -15px black;
}

.t-paper-width {
  max-width: $paper-width;
}

.t-toolbar {
  padding-right: 0.25rem !important;
  padding-left: 0.25rem !important;
}

.t-toolbar-button {
  margin-right: 0.125rem;
  margin-left: 0.125rem;
}

input.t-h2,
.t-h2 input,
.t-h2 .t-prefix {
  margin-bottom: 0.5rem;
  font-family: inherit;
  line-height: 1.2;
  font-size: 2 * $font-size-base;
}

.t-input {
  border-width: 0 0 1px 0;
  border-color: $gray-500;
  background-color: transparent;
  padding: 0;
  height: auto;
  margin-bottom: -1px;
}

.t-input:focus {
  background-color: transparent;
  box-shadow: 0 2px $primary;
}

.t-dynamic-container .t-input {
  box-shadow: 0 1px $gray-600;
}

.t-dynamic-container.is-invalid .t-input {
  box-shadow: 0 1px $danger;
}

.t-dynamic-container .t-input:focus {
  box-shadow: 0 2px $primary;
}

.t-studio-input {
  padding: 0.15rem 0.45rem !important;
  height: auto;
  border: 1px solid $gray-800;
  color: white !important;
  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.45);
  background-color: $secondary !important;
}

.t-studio-dropdown {
  background-color: $gray-700;
  border: 1px solid $gray-800;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
  color: $whitish;
}

.t-studio-input.t-code {
  background-color: $gray-900 !important;
}

.t-studio-input button {
  color: white !important;
}

.t-less-dark {
  background-color: $gray-700;
}

.t-less-dark .t-input {
  color: $whitish !important;
}

.t-less-dark .t-input::placeholder {
  color: darkgrey;
}

.t-less-dark .t-input::-webkit-input-placeholder {
  color: darkgrey;
}

.t-less-dark .t-input:-ms-input-placeholder {
  color: darkgrey;
}

.t-much-less-dark {
  background-color: $gray-600;
}

.t-studio-input::placeholder {
  color: darkgrey;
}

.t-studio-input::-webkit-input-placeholder {
  color: darkgrey;
}

.t-studio-input:-ms-input-placeholder {
  color: darkgrey;
}

.t-studio-source-area {
  overflow-y: auto;
  color: white !important;
  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.45);
}

.t-icon-selector {
  height: 11rem;
  overflow-y: auto;
  border: 1px solid $gray-800;
  color: white !important;
  background-color: $secondary !important;
}

.t-icon-selector-icon {
  width: 30px;
  border: 1px solid $secondary;
}

.t-icon-selector-icon:hover {
  background-color: $gray-650;
  // border-color: $gray-700;
}

.t-icon-selector-icon.t-highlighted {
  background-color: $gray-650;
  border-color: $gray-700;
}

.t-studio-drop-area {
  min-height: 5rem;
  overflow-y: auto;
  border: 1px dashed $gray-800;
  color: white !important;
  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.45);
  background-color: $secondary !important;
}

.t-studio-source-row {
  padding: 0.15rem !important;
  margin: 0.15rem;
  height: auto;
  background-color: $gray-650 !important;
  color: white !important;
  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.45);
  border: 1px solid $gray-700;
}

.t-studio-drop-row {
  padding: 0.15rem 0.15rem 0.15rem 0.45rem !important;
  margin: 0.15rem;
  height: auto;
  background-color: $gray-650 !important;
  color: white !important;
  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.45);
  border: 1px solid $gray-700;
  font-size: 80%;
}

// .t-studio-section {
//   background-color: $gray-700;
// }

.t-studio-section-header {
  border-bottom: 1px solid $gray-800;
  border-top: 1px solid $gray-800;
  margin-top: -1px;
  padding: 0.5rem;
  background-color: $gray-750;
}
.t-studio-section-header:hover {
  background-color: $gray-650;
}

.t-dark-border {
  border-color: $gray-800 !important;
}

$studio-pane-width: 13.5rem;
$studio-wide-pane-width: 30rem;
$studio-pane-border: 1px;
$slightly-less-white: rgba(255, 255, 255, 0.9);

.t-studio-pane {
  width: $studio-pane-width;
  min-width: $studio-pane-width;
  color: $whitish !important;
  border-right: $studio-pane-border solid $gray-900;
  border-left: 0 solid $gray-900;
}

.t-studio-pane.t-wide-studio-pane {
  width: $studio-wide-pane-width;
  min-width: $studio-wide-pane-width;
}

.t-collapsed-studio-pane {
  color: $whitish !important;
  border-right: $studio-pane-border solid $gray-900;
  min-width: 38px;
}

.t-collapsed-studio-pane span {
  -ms-writing-mode: tb-rl;
  -webkit-writing-mode: vertical-rl;
  writing-mode: vertical-rl;
  white-space: nowrap;
}
/* ... */

